[package]
name = "yew-webgl"
version = "0.1.0"
authors = ["Miklós Tusz <mdtusz@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"
stdweb = "0.4.20"
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
gloo-render = "0.1"
gloo-events = "0.1.2"
gloo-console = "0.2.1"
glam = "0.8.2"
getrandom = { version = "0.2", features = ["js"] }

[dependencies.web-sys]
version = "0.3"
features = [
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGlProgram',
  'WebGlRenderingContext',
  'WebGl2RenderingContext',
  'WebGlVertexArrayObject',
  'WebGlShader',
  'WebGlUniformLocation',
  'Window',
  'Document',
]
